argocd/apps/portainer/middleware-secure-headers.yaml
# 06-middleware-secure-headers.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: portainer
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    contentTypeNosniff: true
    referrerPolicy: "same-origin"
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    customResponseHeaders:
      X-Frame-Options: "DENY"
      X-Content-Type-Options: "nosniff"
      Referrer-Policy: "same-origin"
