argocd/apps/portainer/namespace.yaml
# 01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
  labels:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/managed-by: argocd
