argocd/apps/portainer/deployment.yaml
# 03-deployment-portainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: portainer
  labels:
    app.kubernetes.io/name: portainer
    app: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portainer
        app: portainer
    spec:
      containers:
        - name: portainer
          image: portainer/portainer-ce:latest
          imagePullPolicy: IfNotPresent
          args:
            - --http-enabled
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 9443
              name: https
          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 10
            failureThreshold: 3
          volumeMounts:
            - mountPath: /data
              name: portainer-data
      volumes:
        - name: portainer-data
          persistentVolumeClaim:
            claimName: portainer-data
